# agent-blackbox

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
agent_blackbox/: cli.py  html_report.py  policy.py  risk.py
docs/: DEMO_PACK.md  EXAMPLES.md  GITHUB_PUBLISH.md  LAUNCH.md  MARKET_NICHES.md  OUTREACH.md  POLICY_GATES.md  POSTING_QUEUE.md  RUN_SCHEMA.md
examples/: check_blackbox_policy.py  tiny_agent.py
examples/sample_repo/: README.md
tests/: test_cli_smoke.py  test_policy.py  test_risk.py
