[build-system]
requires=["setuptools>=68"]
build-backend="setuptools.build_meta"
[project]
name="agent-blackbox"
version="0.1.0"
description="Flight recorder for local AI agents"
readme="README.md"
requires-python=">=3.10"
license={text="MIT"}
authors=[{name="Basti + Hermes"}]
keywords=["ai-agents","observability","audit","developer-tools","agent-safety"]
[project.scripts]
agent-blackbox="agent_blackbox.cli:main"
[tool.setuptools.packages.find]
include=["agent_blackbox*"]
